--- a/index2.html
+++ b/index2.html
@@ -26,6 +26,16 @@
 
     <main>
         <h1>SOBRE MÍ</h1>
+
+        <img src="/Foto/WhatsApp Image 2023-11-09 at 11.25.32 AM.jpeg" class="img-fluid" alt="...">
+
+        <p>
+            ¡Hola! Soy Iván Jiménez, modelador 3D y estuiante de comunicación y entretenimiento digital de la Universidad de Medellín, ubicada en la ciudad de Medellín, Colombia.
+            <br>
+            <br>Soy un apasionado por lo hago que y me encantaría poder ayudarte a hacer tus sueños realidad en algún momento.
+            <br>
+            <br>¡No dudes en contactarte conmigo!
+        </p>
     </main>
 </body>
 
