--- a/index4.html
+++ b/index4.html
@@ -35,7 +35,8 @@
                     <div class="card-body">
                         <h5 class="card-title">Stand de Nintendo</h5>
                         <p class="card-text">Stadn de Nintendo Switch con una estética futurista y una forma innovadora
-                            en su estrictura para que vayas a explorar otros mundos.</p>
+                            en su estrictura para que vayas a explorar otros mundos.
+                        </p>
                         <a href="index5.html" class="btn btn-primary">Ver más</a>
                     </div>
                 </div>
@@ -60,7 +61,8 @@
                     <div class="card-body">
                         <h5 class="card-title">Estación de Spotify</h5>
                         <p class="card-text">Estación de Spotify inspirada en una estación de gasolina; para que vayas
-                            a recargar tus energías escuchando tu música favorita.</p>
+                            a recargar tus energías escuchando tu música favorita.
+                        </p>
                         <a href="index7.html" class="btn btn-primary">Ver más</a>
                     </div>
                 </div>
