--- a/index7.html
+++ b/index7.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <a href="index4.html" class="btn btn-primary">Atrás</a>
+
     <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
